Fixing appointment api
